--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,7 +30,7 @@ jobs:
           node-version: 16
           cache: 'npm'
       - run: npm ci
-      - run: npm run build
+      - run:  npm run dev -- --open
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
