--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^2.0.2",
-		"gh-pages": "^5.0.0"
+		"gh-pages": "^5.0.0",
+		"undici": "^5.21.2"
 	}
 }
